--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -298,6 +298,10 @@ a, .button-menu{
     }
     a {
         color: var(--color-blue);
+        text-decoration: none;
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
 
@@ -324,3 +328,216 @@ dt {
 
 /* MARK: overige info */
 
+.betalen-ing {
+    border-top: solid 1px var(--color-ing);
+    border-bottom: solid 1px var(--color-ing);
+    padding: 1em .5em 1em .8em;
+    margin: .7em;
+    display: grid;
+    grid-column: auto .5fr;
+    column-gap: .6em;
+    a {
+        color: var(--color-blue);
+        font-family: var(--font-proxima-regular);
+        font-size: var(--font-size-m);
+        text-decoration: none; 
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
+
+.ing {
+    grid-column: 1/2;
+}
+
+.p-ing {
+    grid-column: 1/2;
+    
+}
+
+.logo-ing {
+    grid-column: 2/3;
+}
+
+.verandering {
+    background-color: var(--color-lightblue);
+    margin: .8em;
+    border-radius: .3em;
+    position: relative;
+    padding-bottom: 4em;
+    padding-top: 2em;
+}
+
+.button-verandering {
+        background-color: var(--color-white);
+        position: absolute;
+        left: 6%;
+        font-family: var(--font-proxima-regular);
+        color: var(--color-blue);
+        border: 1px solid var(--color-blue);
+        padding: .7em;
+        width: 18em;
+        text-align: center;
+        border-radius: .4em;
+        &:hover {
+            background-color: var(--color-blue);
+            color: var(--color-white);
+            cursor: pointer;
+        }
+    }
+
+.h2-verandering {
+    text-align: center;
+    padding: .5em;
+}
+
+.p-verandering {
+    text-align: center;
+    padding: .5em;
+}
+
+.activiteit {
+  display: flex;
+  justify-content: center;
+  border-bottom: var(--border);
+  border-top: var(--border);
+}
+
+.activiteit-info {
+  border-right: var(--border);
+  padding: 1em;
+  margin: .1em;
+}
+
+.h2-activiteit {
+    padding: 1em 0 1em .5em;
+}
+
+.buurt-groep {
+    display: grid;
+    grid-template-columns: .5fr 1fr .5fr;
+    grid-template-rows: .2fr .2fr;
+    padding-bottom: 2em;
+    img {
+        grid-column: 1/2;
+        grid-row: 1/3;
+    }
+    a {
+        grid-column: 2/3;
+        grid-row: 1/2;
+
+    }
+    p {
+        grid-column: 2/3;
+        grid-row: 2/3;
+
+    }
+    .pijl {
+        grid-column: 3/4;
+        grid-row: 1/2;
+        align-items: right
+    }
+}
+
+.h2-buurt {
+    padding-bottom: 1em;
+}
+
+iframe {
+    padding-left: .7em;
+}
+
+.tools-maps {
+    display: grid;
+    grid-column: 1fr;
+    a {
+        grid-column: 1/2;
+        color: var(--color-blue);
+        text-decoration: none;
+        font-size: var(--font-size-m);
+        padding: .5em;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
+
+.bm-makelaars {
+    border: var(--border);
+    margin: .8em;
+    padding: .8em;
+    @media (min-width: 768px) {
+        max-width: 60rem;
+    }
+    a {
+        color: var(--color-blue);
+        text-decoration: none;
+        display: flex;
+        padding: .9em 0 .8em .5em;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+    img {
+        padding-left: .5em;
+    }
+
+    .link-tel {
+       border-bottom: var(--border);
+
+    }
+    button {
+        background-color: var(--color-orange);
+        color: var(--color-white);
+        padding: .6em;
+        border-radius: .2em;
+        width: 16em;
+        margin-top: .9em;
+        margin-left: 1em;
+        font-family: var(--font-proxima-regular);
+        text-align: center;
+        display: flex;
+        align-items: center; /* Zorgt dat SVG en tekst verticaal gecentreerd zijn */
+        justify-content: center;
+        column-gap: .2em;
+        &:hover {
+            cursor: pointer;
+            background-color: var(--color-orange-hover);
+        }
+    }
+}
+
+.fout-melden {
+    color: var(--color-blue);
+    text-decoration: none;
+    display: flex;
+    font-family: var(--font-proxima-regular);
+    font-size: var(--font-size-m);
+    padding: .9em 0 1.2em .5em;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
+.vergelijkbaar {
+    h2 {
+        padding: .5em 0 .5em .5em;
+    }
+
+    button {
+        background-color: var(--color-white);
+        border: 1px solid var(--color-blue);
+        padding: .7em;
+        margin: .6em 0 .1em .5em;
+        &:hover {
+            background-color: var(--color-blue);
+            color: var(--color-white);
+            cursor: pointer;
+        }
+    }
+}
