--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -122,6 +122,7 @@ body {
     --color-light-grey: #999999;
     --color-light-grey-hover: #817F7F;
     --color-grey: #4D4D4D;
+    --color-ing: #F86700;
 
     --border: solid 1px var(--color-border);
 
@@ -146,6 +147,6 @@ button {
 h2 {
   font-size: var(--font-size-m);
   font-family: var(--font-proxima-semibold);
-  
 }
+
 
