--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -526,18 +526,31 @@ iframe {
 
 .vergelijkbaar {
     h2 {
-        padding: .5em 0 .5em .5em;
+        padding: .5em 0 .5em .8em;
     }
 
     button {
         background-color: var(--color-white);
         border: 1px solid var(--color-blue);
         padding: .7em;
-        margin: .6em 0 .1em .5em;
+        margin: .6em 0 .1em .8em;
         &:hover {
             background-color: var(--color-blue);
             color: var(--color-white);
             cursor: pointer;
         }
+    }
+}
+
+
+.aanbevelingen {
+    border: var(--border);
+    margin: .8em;
+    padding: 1em;
+    @media (min-width: 768px) {
+        max-width: 60rem;
+    }
+    h2, img, .price {
+        padding: .5em 0 .3em .5em
     }
 }
