--- a/views/index.liquid
+++ b/views/index.liquid
@@ -28,6 +28,7 @@
             </div>
         </div>  
 
+        <div class="desktop">
             <section class="adres">
 
                 <h1 class="straat"> {{ huis.street }} 11</h1>
@@ -316,31 +317,32 @@
         </article>
 
         <article >
-            <h2 class="h2-activiteit">Activiteit</h2>
+            <h1 class="h1-activiteit">Activiteit</h1>
 
             <section class="activiteit">
                 <div class="activiteit-info">
-                    <img src="/assets/oog.png" alt="illustratie van oog">
+                    <img src="/assets/oog.png" alt="icon van oog">
                     <p>75x</p>
                     <p>bekenen</p>
                 </div>
 
                 <div class="activiteit-info">
-                    <img src="/assets/hart.png" alt="illustratie van hart">
+                    <img src="/assets/hart.png" alt="icon van hart">
                     <p>12x</p>
                     <p>bewaard</p>
                 </div>
 
                 <div class="activiteit-info">
-                    <img src="/assets/agenda.png" alt="illustratie van hart">
+                    <img src="/assets/agenda.png" alt="icon van hart">
                     <p>31-12-2024</p>
                     <p>Op funda</p>
                 </div>
             </section>
         </article>
 
+        <h1 class="h1-buurt">Buurt</h1>
+
         <article class="description-list">
-            <h2 class="h2-buurt">Buurt</h2>
             
             <div class="buurt-groep">
                 <img src="/assets/thumpnail.png">
@@ -513,28 +515,84 @@
             </section>
         </article>
 
-        <article>
-            <h2>Antwoord op al je belangrijke vragen</h2>
+        <article class="FAQ">
 
-            <p>Wil je weten hoe je als een pro op funda kunt zoeken?</p>
-            <img src="/assets/down.png" alt="illustratie van pijltje naar beneden">
+            <h1>Antwoord op al je belangrijke vragen</h1>
 
-            <p>Wat betekent 'onder bod' als je een huis wilt kopen?</p>
-            <img src="/assets/down.png" alt="illustratie van pijltje naar beneden">
+            <section>
+                <input id="faq1" type="checkbox" class="toggle">
 
-            <p>Waarop moet je letten bij het bezichtigen van een huis?</p>
-            <img src="/assets/down.png" alt="illustratie van pijltje naar beneden">
+                <div class="vraag">
+                    <p>Wil je weten hoe je als een pro op funda kunt zoeken?</p>
+                    <label for="faq1">
+                        <img src="/assets/down.png" alt="icon van pijltje naar beneden">
+                    </label>
+                </div>
 
-            <p>Voorbeeldbrief voor een bod op een huis: hoe doe ik dit?</p>
-            <img src="/assets/down.png" alt="illustratie van pijltje naar beneden">
+                <div class="antwoord">
+                    <p>Funda toont niet alleen beschikbare woningen, je ziet er ook verkochte woningen staan. Dat doen we zodat een potentiële verkoper kan zien welke woningen succesvol zijn verkocht door de makelaar. Dit helpt de potentiële verkoper in de zoektocht naar een makelaar. Een verkochte woning staat maximaal een jaar op Funda, daarna verdwijnt de woning automatisch van de site.</p>
+                </div>
+                
+            </section>
+
+            <section>
+                <input id="faq2" type="checkbox" class="toggle">
+
+                <div class="vraag">
+                    <p>Wat betekent 'onder bod' als je een huis wilt kopen?</p>
+
+                    <label for="faq2">
+                        <img src="/assets/down.png" alt="icon van pijltje naar beneden">
+                    </label>
+                </div>
+
+                <div class="antwoord">
+                    <p>Wanneer een huis 'onder bod' is, kan dat verwarrend zijn. Dit betekent dat er al een bod is uitgebracht dat de verkoper overweegt. Het betekent echter niet dat de verkoop al rond is.</p>
+                </div>
+
+            </section>
+
+            <section>
+                <input id="faq3" type="checkbox" class="toggle">
+
+                <div class="vraag">
+                    <p>Waarop moet je letten bij het bezichtigen van een huis?</p>
+                    <label for="faq3">
+                        <img src="/assets/down.png" alt="icon van pijltje naar beneden">
+                </label>
+                </div>
+
+                <div class="antwoord">
+                    <p>Stel tijdens een bezichtiging alle vragen die je hebt om te kunnen bepalen of dit huis aan je wensen en verwachtingen voldoet. Bijvoorbeeld waarom de verkopers willen verkopen. Wat voor buren je krijgt. Of wanneer de cv-ketel voor het laatst vervangen is. Het is handig om een lijstje met vragen voor te bereiden, zodat je niets vergeet. Deze checklist helpt je op weg, zodat je niets vergeet.</p>
+                </div>
+
+                
+            </section>
+
+            <section>
+                <input id="faq4" type="checkbox" class="toggle">
+
+                <div class="vraag">
+                    <p>Voorbeeldbrief voor een bod op een huis: hoe doe ik dit?</p>
+                    <label for="faq4">
+                        <img src="/assets/down.png" alt="icon van pijltje naar beneden">
+                    </label>
+                </div>
+
+                <div class="antwoord">
+                    <p>Een bod uitbrengen op een huis is een grote stap en het kan helpen om een goed voorbeeld te hebben van hoe je dat het beste kunt doen. Een duidelijke en goed gestructureerde brief kan het verschil maken.</p>
+                </div>
+            </section>
+
         </article>
 
-        <article>
-            <h2>Verder verdiepen</h2>
+        <article class="verdiepen">
+            <h1 class="h1-buurt">Verder verdiepen</h1>
             <button>Bieden</button>
             <button>Verduurzamen</button>
             <button>Hypotheek</button>
         </article>
+        </div>
     </main>
 
 
