#3 fallback voor description

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -213,6 +213,15 @@ a, .button-menu{
 }
 
 
+@supports not (selector(:checked)) {
+    .content {
+        display: block;
+    }
+    #check, label {
+        display: none;
+    }
+}
+
 
 
 .omschrijving label {
