--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -113,17 +113,17 @@ body {
 
     /* colors */
     --color-orange: #ff9b21;
-    --color-orange-hover: #F6951F;
+    --color-orange-hover: #f6951f;
     --color-brown: #6a281c;
     --color-white: #ffffff;
     --color-broken-white: #f8f0e6;
     --color-lightblue: #e5f6ff;
     --color-blue: #2a8fd8;
-    --color-border: #E6E6E6;
+    --color-border: #e6e6e6;
     --color-light-grey: #999999;
-    --color-light-grey-hover: #817F7F;
-    --color-grey: #4D4D4D;
-    --color-ing: #F86700;
+    --color-light-grey-hover: #817f7f;
+    --color-grey: #4d4d4d;
+    --color-ing: #f86700;
 
     --border: solid 1px var(--color-border);
 
