--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -55,7 +55,8 @@ li {
         }
 }
 
-a, .button-menu{
+a, 
+.button-menu {
     font-family: var(--font-proxima-regular);
     font-size: var(--font-size-xxs);
 }
@@ -154,7 +155,8 @@ a, .button-menu{
     padding-left: .4em;
 }
 
-.maandlasten a {
+.maandlasten,
+a {
     display: flex;
     align-items: center;
     padding-left: -.5em;
@@ -183,7 +185,8 @@ a, .button-menu{
     padding-top: .8em;
 }
 
-.omschrijving p {
+.omschrijving,
+p {
     padding-left: .8em;
     font-family: var(--font-proxima-regular);
     font-size: var(--font-size-m);
@@ -210,7 +213,8 @@ a, .button-menu{
 
 .content {
     display: none;
-    animation: fadeIn .5s}
+    animation: fadeIn .5s
+}
 
 
 @keyframes fadeIn {
@@ -235,8 +239,8 @@ a, .button-menu{
 }
 
 
-
-.omschrijving label {
+.omschrijving,
+label {
     display: flex;
     align-items: center;
     padding-left: .5em;
@@ -599,7 +603,9 @@ iframe {
     @media (min-width: 768px) {
         max-width: 60rem;
     }
-    h2, img, .price {
+    h2,
+    img,
+    .price {
         padding: .5em 0 .3em .5em
     }
 }
