#12 Lighthouse: button accessible name

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -33,7 +33,7 @@
 
         <form method="POST" action="/detail/koop/Amsterdam/huis-Apollolaan-11/28">
             <input type="hidden" name="house_id" value="{{ huis.id }}">
-                <button class="like-button" type="submit">
+                <button class="like-button" type="submit" title="button of a heart">
                     {% if from %}
                         <!-- Empty state: empty heart -->
 
