#12 Lighthouse: accessible name iframe

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -392,7 +392,9 @@
             style="border:0;" 
             allowfullscreen="" 
             loading="lazy" 
-            referrerpolicy="no-referrer-when-downgrade">
+            referrerpolicy="no-referrer-when-downgrade"
+            title="Google maps kaart Apollolaan 11 en omgeving"
+            >
         </iframe> 
 
         <div class="tools-maps">
