#12 Lighthouse: caption met <track>

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -13,6 +13,7 @@
             <div class="carousel__slide" data-label="Slide 2">
                 <video controls width="375" height=320 title="video van een huis aan de Apollolaan"> 
                     <source src="/assets/video.mp4" type="video/mp4">
+                    <track src="" kind="captions" srclang="nl" label="dutch_captions">
                 </video>
             </div>
             
