--- a/views/index.liquid
+++ b/views/index.liquid
@@ -259,7 +259,9 @@
 
                 <dl>
                     <dt>AMSTERDAM AB 678</dt>
-                    <a href=""><dd class="detail-standard">Kadastrale kaart</dd></a>
+                    <a href="">
+                        <dl><dd class="detail-standard">Kadastrale kaart</dd></dl>
+                    </a>
 
                     <dt>Oppervlakte</dt>
                     <dd class="detail-standard">620 m²</dd>
